--- a/KOscores.html
+++ b/KOscores.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="./logos/favicon.png">
-    <title>Euro2024 Results vs. Predictions</title>
+    <title>Knockout Stages Results</title>
     <style>
         body {
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -100,7 +100,7 @@
     <div class="logo-container">
         <img src="./logos/logo.png" alt="Euro 2024 Logo" style="width:300px;">
     </div>
-    <h1>Euro2024 Results vs. Predictions</h1>
+    <h1>Knockout Stages Results</h1>
     <table id="predictionsTable">
         <thead>
             <tr>
@@ -113,50 +113,50 @@
             <!-- QF Rows -->
             <tr>
                 <td rowspan="8">QF</td>
-                <td>Match 1</td>
+                <td>QT 1</td>
             </tr>
             <tr>
-                <td>Match 2</td>
+                <td>QT 2</td>
             </tr>
             <tr>
-                <td>Match 3</td>
+                <td>QT 3</td>
             </tr>
             <tr>
-                <td>Match 4</td>
+                <td>QT 4</td>
             </tr>
             <tr>
-                <td>Match 5</td>
+                <td>QT 5</td>
             </tr>
             <tr>
-                <td>Match 6</td>
+                <td>QT 6</td>
             </tr>
             <tr>
-                <td>Match 7</td>
+                <td>QT 7</td>
             </tr>
             <tr>
-                <td>Match 8</td>
+                <td>QT 8</td>
             </tr>
             <!-- SF Rows -->
             <tr>
                 <td rowspan="4">SF</td>
-                <td>Match 1</td>
+                <td>QT 1</td>
             </tr>
             <tr>
-                <td>Match 2</td>
+                <td>QT 2</td>
             </tr>
             <tr>
-                <td>Match 3</td>
+                <td>QT 3</td>
             </tr>
             <tr>
-                <td>Match 4</td>
+                <td>QT 4</td>
             </tr>
             <!-- F Rows -->
             <tr>
                 <td rowspan="2">F</td>
-                <td>Match 1</td>
+                <td>QT 1</td>
             </tr>
             <tr>
-                <td>Match 2</td>
+                <td>QT 2</td>
             </tr>
             <!-- Champion Row -->
             <tr>
