--- a/rules.html
+++ b/rules.html
@@ -85,7 +85,8 @@
         <ul class="menu">
             <li><a href="./ranks.html">Rankings</a></li>
             <li><a href="./comp2euros.html">Euro2024 Results</a></li>
-            <li><a href="./all_predictions.html">Game by Game Points</a></li>
+            <li><a href="./gamebygame.html">Group Stages Results</a></li>
+            <li><a href="./KOscores.html">KO Stages Results</a></li>
             <li><a href="./pvsp.html">Player vs Player</a></li>
             <li><a href="./all_predictions.html">Download All Predictions</a></li>
             <li><a href="./predictform.html">Prediction Form</a></li>
