--- a/KOscores.html
+++ b/KOscores.html
@@ -76,10 +76,14 @@
             right: 10px;
             font-size: 0.8em;
             color: #484747;
-            background-color: 1e1e1e;
+            background-color: #1e1e1e;
             padding: 5px;
             border-radius: 3px;
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .stage-divider {
+            border-top: 1px solid #484747;
         }
     </style>
 </head>
@@ -137,6 +141,8 @@
             <tr>
                 <td>QT 8</td>
             </tr>
+            <!-- Divider -->
+            <tr class="stage-divider"></tr>
             <!-- SF Rows -->
             <tr>
                 <td rowspan="4">SF</td>
@@ -151,6 +157,8 @@
             <tr>
                 <td>QT 4</td>
             </tr>
+            <!-- Divider -->
+            <tr class="stage-divider"></tr>
             <!-- F Rows -->
             <tr>
                 <td rowspan="2">F</td>
@@ -159,14 +167,20 @@
             <tr>
                 <td>QT 2</td>
             </tr>
+            <!-- Divider -->
+            <tr class="stage-divider"></tr>
             <!-- Champion Row -->
             <tr>
                 <td colspan="2">Champion</td>
             </tr>
+            <!-- Divider -->
+            <tr class="stage-divider"></tr>
             <!-- Golden Boot Row -->
             <tr>
                 <td colspan="2">Golden Boot</td>
             </tr>
+            <!-- Divider -->
+            <tr class="stage-divider"></tr>
             <!-- Top Player Row -->
             <tr>
                 <td colspan="2">Top Player</td>
