--- a/KOscores.html
+++ b/KOscores.html
@@ -53,6 +53,10 @@
             background-color: #333333;
         }
 
+        td.stage-cell {
+            border-bottom: 2px solid #444444;
+        }
+
         select {
             width: 200px;
             background-color: #6b6a6a;
@@ -113,7 +117,7 @@
         <tbody>
             <!-- QF Rows -->
             <tr>
-                <td rowspan="8">QF</td>
+                <td rowspan="8" class="stage-cell">QF</td>
                 <td>QT 1</td>
             </tr>
             <tr>
@@ -139,7 +143,7 @@
             </tr>
             <!-- SF Rows -->
             <tr>
-                <td rowspan="4">SF</td>
+                <td rowspan="4" class="stage-cell">SF</td>
                 <td>QT 1</td>
             </tr>
             <tr>
@@ -153,7 +157,7 @@
             </tr>
             <!-- F Rows -->
             <tr>
-                <td rowspan="2">F</td>
+                <td rowspan="2" class="stage-cell">F</td>
                 <td>QT 1</td>
             </tr>
             <tr>
@@ -161,15 +165,15 @@
             </tr>
             <!-- Champion Row -->
             <tr>
-                <td colspan="2">Champion</td>
+                <td colspan="2" class="stage-cell">Champion</td>
             </tr>
             <!-- Golden Boot Row -->
             <tr>
-                <td colspan="2">Golden Boot</td>
+                <td colspan="2" class="stage-cell">Golden Boot</td>
             </tr>
             <!-- Top Player Row -->
             <tr>
-                <td colspan="2">Top Player</td>
+                <td colspan="2" class="stage-cell">Top Player</td>
             </tr>
         </tbody>
     </table>
